# unity-action-api

./: CMakeLists.txt  HACKING
debian/: changelog  control  copyright  libunity-action-doc.install  libunity-action-qt-dev.install  libunity-action-qt1-dev.install  libunity-action-qt1.install  rules  unity-action-doc.compress  unity-action-doc.install
documentation/: CMakeLists.txt
documentation/cpp/: CMakeLists.txt  Doxyfile.in
documentation/cpp/pages/: context.dox  future-plans.dox  mainpage.dox  offline-actions.dox  parameterized-actions.dox  platform-integration.dox  preview-actions.dox  using-cpp.dox
documentation/qml/: CMakeLists.txt  doc.pro  qml-ubuntu-hud-hud.qdoc  unity-action-qml.qdocconf.in
documentation/qml/pages/: context.qdoc  future-plans.qdoc  mainpage.qdoc  offline-actions.qdoc  overview.qdoc  platform-integration.qdoc  preview-actions.qdoc
documentation/qml/qml-api/: Action.qml  ActionContext.qml  ActionManager.qml  PreviewAction.qml  PreviewParameter.qml  PreviewRangeParameter.qml
examples/: CMakeLists.txt  example.cpp  mainwindow.cpp  mainwindow.h
examples/action-context/: CMakeLists.txt  action-context.cpp
examples/mail-app/: CMakeLists.txt  mail-app.cpp  mail-app.desktop
examples/preview-action/: CMakeLists.txt  preview-action.cpp
include/unity/action/: Action  ActionContext  ActionManager  MenuItem  PreviewAction  PreviewParameter  PreviewRangeParameter  unity-action-context.h  unity-action-manager.h  unity-action.h  unity-menu-item.h  unity-preview-action.h  unity-preview-parameter.h  unity-preview-range-parameter.h
qml/Ubuntu/Unity/: CMakeLists.txt
qml/Ubuntu/Unity/Action/: CMakeLists.txt  plugin.cpp  plugin.h  qml-action.cpp  qml-action.h  qml-context.cpp  qml-context.h  qml-manager.cpp  qml-manager.h  qml-preview-action.cpp  qml-preview-action.h
src/: CMakeLists.txt  unity-action-common.h  unity-action-context.cpp  unity-action-manager.cpp  unity-action-qt.pc.in  unity-action.cpp  unity-action.h  unity-menu-item.cpp  unity-preview-action.cpp  unity-preview-action.h  unity-preview-parameter.cpp  unity-preview-range-parameter.cpp
test/cpp/: CMakeLists.txt  actiontest.cpp  main.cpp  tst_action.cpp  tst_action.h  tst_actioncontext.cpp  tst_actioncontext.h  tst_actionmanager.cpp  tst_actionmanager.h  tst_menuitem.cpp  tst_menuitem.h  tst_previewaction.cpp  tst_previewaction.h  tst_previewrangeparameter.cpp  tst_previewrangeparameter.h
test/qml/: CMakeLists.txt  tst_api.qml  tst_api1.1.qml
